[package]
name = "sqlxtest"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }
sqlx = "0.7.2"

either = "1.6.1"
futures = { version = "0.3.19", default-features = false }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink", "io"] }
url = "2.4.1"
log = { version = "0.4.14", default-features = false }

[workspace]
